# Onallo-Laboratorium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Client/: CMakeLists.txt
Client/shaders/: compile.bat  compileDebug.bat  compileRelease.bat  shader.frag  shader.vert
Client/shaders/compiled/: frag.spv  vert.spv
Client/src/: main.cpp
Client/src/Networking/: ClientNetworking.cpp
Client/src/Networking/include/: ClientNetworking.h  INetworking.h  NetworkUtils.h
Client/src/Vulkan/: Core.cpp  Core.h  DeviceManager.cpp  VulkanObject.cpp  VulkanObject.h
Client/src/Vulkan/CommandPool/: CommandPoolManager.cpp
Client/src/Vulkan/CommandPool/include/: CommandPoolManager.h
Client/src/Vulkan/Descriptor/: Descriptor.cpp  DescriptorManager.cpp
Client/src/Vulkan/Descriptor/include/: Descriptor.h  DescriptorManager.h
Client/src/Vulkan/DeviceManager/: DeviceManager.cpp
Client/src/Vulkan/DeviceManager/include/: DeviceManager.h
Client/src/Vulkan/Pipeline/: Pipeline.cpp  PipelineManager.cpp
Client/src/Vulkan/Pipeline/include/: Pipeline.h  PipelineManager.h
Client/src/Vulkan/Renderer/: Renderer.cpp
Client/src/Vulkan/Renderer/include/: Renderer.h
Client/src/Vulkan/ResourceManager/: Images.cpp  ResourceManager.cpp
Client/src/Vulkan/ResourceManager/include/: Images.h  Quad.h  ResourceManager.h
Client/src/Vulkan/Swapchain/: Images.cpp  SwapChainManager.cpp
Client/src/Vulkan/Swapchain/include/: Images.h  SwapChainManager.h
Client/src/Vulkan/UI/: UserInterface.cpp  UserInterface.h
Client/src/Vulkan/UI/include/: UserInterface.h
Client/src/Vulkan/Utils/: Constants.h  DescriptorProperties.h  ImVecUtils.h  Input.h  QueueFamilyIndices.h  QueueFamilyIndicies.h  StageConstants.h  SwapChainSupportDetails.h
Client/src/Vulkan/Window/: Window.cpp  Window.h
Client/src/Vulkan/Window/include/: Window.h
Client/src/Vulkan/include/: Core.h  DeviceManager.h
Server/: CMakeLists.txt
Server/shaders/: compileDebug.bat  compileRelease.bat  shader.frag
Server/shaders/compiled/: frag.spv
Server/src/: main.cpp
Server/src/Networking/: ServerNetworking.cpp
Server/src/Networking/include/: ServerNetworking.h
Server/src/Vulkan/: Core.cpp  HeadlessCore.cpp  WindowedCore.cpp
Server/src/Vulkan/CommandPool/: CommandPoolManager.cpp
Server/src/Vulkan/CommandPool/include/: CommandPoolManager.h
Server/src/Vulkan/Descriptor/: Descriptor.cpp  DescriptorManager.cpp
Server/src/Vulkan/Descriptor/include/: Descriptor.h  DescriptorManager.h
Server/src/Vulkan/DeviceManager/: DeviceManager.cpp
Server/src/Vulkan/DeviceManager/include/: DeviceManager.h
Server/src/Vulkan/Pipeline/: Pipeline.cpp  PipelineManager.cpp
Server/src/Vulkan/Pipeline/include/: Pipeline.h  PipelineManager.h
Server/src/Vulkan/Renderer/: OffScreenRenderer.cpp  Renderer.cpp  WindowedRenderer.cpp
Server/src/Vulkan/Renderer/include/: OffScreenRenderer.h  Renderer.h  WindowedRenderer.h
Server/src/Vulkan/ResourceManager/: Images.cpp  ResourceManager.cpp
Server/src/Vulkan/ResourceManager/include/: Images.h  Quad.h  ResourceManager.h
Server/src/Vulkan/SwapChain/: SwapChainManager.cpp
Server/src/Vulkan/SwapChain/include/: SwapChainManager.h
Server/src/Vulkan/Utils/: Constants.h  DepthStencilOptions.h  DescriptorProperties.h  QueueFamilyIndices.h  SwapChainSupportDetails.h
Server/src/Vulkan/Window/: Window.cpp
Server/src/Vulkan/Window/include/: Window.h
Server/src/Vulkan/include/: Core.h  HeadlessCore.h  WindowedCore.h
lib/logger/: Logger.cpp  Logger.h
